--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="keywords" Content="die kleine pfoten, hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -40,12 +40,17 @@
 	    <p>Machen sie einen Spaziergang in<p>
 		<p><b>Katze und Hundesalon ihr partner in dertierpflage</b></p>
 		<br>
-		<h2>Die Kleine Pfoten<br>Linzer Straße 57<br>4600 Wels<br><br>
+		<h2>Die Kleine Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels<br><br>
 		Telefonisch erreichbar sind wir von 9:00 - 19:00</h2>
 		
 		<h3>0677 623 33493</h3>
 		
 		<h2>Offnungszeiten richten sich nach den Terminen</h2>
+		
+		<h2>Sie k&#0246;nnen uns auch per E-Mail kontaktieren</h2>
+		
+		<h3>pfotenkleine@gmail.com</h3>
+
 	  </div>
 	  
 	  <a href="https://www.google.com/maps/place/Linzer+Str.+57,+4600+Wels,+Austria/@48.1627795,14.0303923,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f2a3cba54ae1:0xdac4fd72e622d8f8!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11c1x3zm65?authuser=0&entry=ttu&g_ep=EgoyMDI1MDExMC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
