--- a/preise.html
+++ b/preise.html
@@ -46,7 +46,7 @@
 	    <td class="firstcolumn">Haarschnitt</td><td>35 &euro;</td><td>40 &euro;</td><td>45 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn">Bürsten</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
+	    <td class="firstcolumn">B&#0252;rsten</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
 	  </tr>
 	  <tr>
 	    <td class="firstcolumn">Entfernung der Unterwolle</td><td>10 &euro;</td><td>15 &euro;</td><td>25 &euro;</td>
@@ -82,7 +82,7 @@
 	<table>
 	  <th>Behandlungen fUr Katzen</th><th>Preis</th>
 	  <tr>
-	    <td class="firstcolumn">Trockenbaden von Katzen und Bürsten</td><td>35 &euro;</td>
+	    <td class="firstcolumn">Trockenbaden von Katzen und B&#0252;rsten</td><td>35 &euro;</td>
 	  </tr>
 	  <tr>
 	    <td class="firstcolumn">enkratzte Katzen</td><td>5 &euro;</td>
