--- a/service.html
+++ b/service.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Ihr Partner in der Tierpflege</title>
+<title>Die Kleine Pfoten: Preise</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="keywords" Content="die kleine pfoten, hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -35,14 +35,14 @@
 	
 	  <div id="service">
 	    <ul>
-		  <li><img src="artwork/bullet.png">Scheren</li>
-		  <li><img src="artwork/bullet.png">Schneiden</li>
-		  <li><img src="artwork/bullet.png">Bürsten</li>
-		  <li><img src="artwork/bullet.png">Unterwolle entfernen</li>
-		  <li><img src="artwork/bullet.png">Baden und Fönen</li>
-		  <li><img src="artwork/bullet.png">Krallen- und Pfotenpflege</li>
-		  <li><img src="artwork/bullet.png">Augenpflege</li>
-		  <li><img src="artwork/bullet.png">Ohrenpflege</li>
+		  <li>Scheren</li>
+		  <li>Schneiden</li>
+		  <li>B&#0252;rsten</li>
+		  <li>Unterwolle entfernen</li>
+		  <li>Baden und F&#0245;nen</li>
+		  <li>Krallen- und Pfotenpflege</li>
+		  <li>Augenpflege</li>
+		  <li>Ohrenpflege</li>
 		</ul>
 
 	  </div>
@@ -51,19 +51,19 @@
 	  <h2>Sowie:</h2>
 	  <div id="service">
 		<ul>
-		  <li><img src="artwork/bullet.png">Analdrusencheck</li>
-		  <li><img src="artwork/bullet.png">Zecken entfernung</li>
-		  <li><img src="artwork/bullet.png">Trockenbaden von Katzen und bürsten</li>
-		  <li><img src="artwork/bullet.png">enkratzte Katzen</li>
-		  <li><img src="artwork/bullet.png">die Knoten im Haar entwirren</li>
-		  <li><img src="artwork/bullet.png">Flohentfernung</li>
-		  <li><img src="artwork/bullet.png">Anpassungsbehandlung für junge und neue Hunden</li>
+		  <li>Analdrusencheck</li>
+		  <li>Zecken entfernung</li>
+		  <li>Trockenbaden von Katzen und b&#0252;rsten</li>
+		  <li>enkratzte Katzen</li>
+		  <li>die Knoten im Haar entwirren</li>
+		  <li>Flohentfernung</li>
+		  <li>Anpassungsbehandlung für junge und neue Hunden</li>
 		</ul>
     </div>
 	
 	<p><b>Das Arbeiten mit der Ausrüstung wird schwierig, wenn der Hund nass 
-	ankommt, und es schränkt auch die Wahl der Frisur ein.Die gesamte 
-	Behandlung wird länger dauern und Ihr Hund wird darüber keine Freude 
+	ankommt, und es schr&#0228;nkt auch die Wahl der Frisur ein.Die gesamte 
+	Behandlung wird l&#0228;nger dauern und Ihr Hund wird darüber keine Freude 
 	haben.</b></p>
 	  
 
