--- a/wichtig.html
+++ b/wichtig.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Ihr Partner in der Tierpflege</title>
+<title>Die Kleine Pfoten: Service</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="keywords" Content="die kleine pfoten, hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -36,44 +36,44 @@
 	
 	<div id="wichtig">
 	
-	<center><img src="images/tartufar.jpg" height="150px" width="auto"></center>
+	<center><img src="images/tartufar.jpg" class="wichtig-img"></center>
 	
 	  <p>Bei den Terminen möchten wir Ihrem Favorit das Beste - daher 
 	  arbeiten wir zuzamen. Nehmen Sie sich Zeit, um den Aufenthalt
 	  Ihres Favorit stressfrei zu gestalten. Auf diese Weise gestalten 
-	  wir gemeinsam das Erscheinungsbild Ihres Favorit für eine 
+	  wir gemeinsam das Erscheinungsbild Ihres Favorit f&#0252;r eine 
 	  bessere Gesundheit und Hygiene.</p>	
 	  
-	  <p>Wir führen Behandlungen für die Gesundheit Ihrer Favoriten und 
+	  <p>Wir f&#0252;hren Behandlungen f&#0252;r die Gesundheit Ihrer Favoriten und 
 	  die Hygiene Ihres Zuhauses durch, nicht für Ausstellungen und 
 	  Wettbewerbe.</p>
 	</div>
 	
 	<div id="wichtig">
 	
-		<center><img src="images/cocker.png" height="150px" width="auto"></center>
+		<center><img src="images/cocker.png" class="wichtig-img"o"></center>
 
 	  <p>Sollte Ihr Favorit gesundheitliche oder Verhaltensprobleme 
 	  haben, weisen Sie dies bitte bei der Terminbuchung darauf hin.</p>
 	  
-	  <p>Der erste Termin könnte kürzer dauern oder unvollständig sein, 
+	  <p>Der erste Termin k&#0246;nnte kürzer dauern oder unvollst&#0228;ndig sein, 
 	  wenn der Favorit unter Stress oder Ängsten steht.</p>
 	  
 	  <p>Unmittelbar vor der Ankunft ist es nicht ratsam, den Hund zu 
-	  füttern, damit er während der Behandlung keinen Durst verspürt.</p>
+	  f&#0252;ttern, damit er w&#0228;hrend der Behandlung keinen Durst versp&#0252;rt.</p>
 	</div>
 	
 	
 	  
 	  <div id="wichtig">
 	  
-	  	<center><img src="images/husky.png" height="150px" width="auto"></center>
+	  	<center><img src="images/husky.png" class="wichtig-img"></center>
 
-	    <p>Bitte pünktlich zum Termin erscheinen - aber nicht zu früh kommen</p>
+	    <p>Bitte p&#0252;nktlich zum Termin erscheinen - aber nicht zu fr&#0252;h kommen</p>
 		
-		<p><b>Bei Verspätung</b> bitte anrufen. Je nach Verspätung kann der Komplettservice nicht mehr erbracht werden.</p>
+		<p><b>Bei Versp&#0228;tung</b> bitte anrufen. Je nach Verspätung kann der Komplettservice nicht mehr erbracht werden.</p>
 		
-		<p>Falls Sie Ihren Termin nicht wahrnehmen können, bitte ich verlässlich um rechtzeitige Bekanntgabe per SMS oder Anruf.</p>
+		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, bitte ich verl&#0228;sslich um rechtzeitige Bekanntgabe per SMS oder Anruf.</p>
      </div>
  
  <div id="footer"> 
