--- a/service.html
+++ b/service.html
@@ -35,14 +35,14 @@
 	
 	  <div id="service">
 	    <ul>
-		  <li>Scheren</li>
-		  <li>Schneiden</li>
-		  <li>B&#0252;rsten</li>
-		  <li>Unterwolle entfernen</li>
-		  <li>Baden und F&#0245;nen</li>
-		  <li>Krallen- und Pfotenpflege</li>
-		  <li>Augenpflege</li>
-		  <li>Ohrenpflege</li>
+		  <li><img src="artwork/bullet.png">Scheren</li>
+		  <li><img src="artwork/bullet.png">Schneiden</li>
+		  <li><img src="artwork/bullet.png">B&#0252;rsten</li>
+		  <li><img src="artwork/bullet.png">Unterwolle entfernen</li>
+		  <li><img src="artwork/bullet.png">Baden und F&#0245;nen</li>
+		  <li><img src="artwork/bullet.png">Krallen- und Pfotenpflege</li>
+		  <li><img src="artwork/bullet.png">Augenpflege</li>
+		  <li><img src="artwork/bullet.png">Ohrenpflege</li>
 		</ul>
 
 	  </div>
@@ -51,13 +51,13 @@
 	  <h2>Sowie:</h2>
 	  <div id="service">
 		<ul>
-		  <li>Analdrusencheck</li>
-		  <li>Zecken entfernung</li>
-		  <li>Trockenbaden von Katzen und b&#0252;rsten</li>
-		  <li>enkratzte Katzen</li>
-		  <li>die Knoten im Haar entwirren</li>
-		  <li>Flohentfernung</li>
-		  <li>Anpassungsbehandlung für junge und neue Hunden</li>
+		  <li><img src="artwork/bullet.png">Analdrusencheck</li>
+		  <li><img src="artwork/bullet.png">Zecken entfernung</li>
+		  <li><img src="artwork/bullet.png">Trockenbaden von Katzen und b&#0252;rsten</li>
+		  <li><img src="artwork/bullet.png">enkratzte Katzen</li>
+		  <li><img src="artwork/bullet.png">die Knoten im Haar entwirren</li>
+		  <li><img src="artwork/bullet.png">Flohentfernung</li>
+		  <li><img src="artwork/bullet.png">Anpassungsbehandlung für junge und neue Hunden</li>
 		</ul>
     </div>
 	
