--- a/wichtig.html
+++ b/wichtig.html
@@ -56,7 +56,7 @@
 	  <p>Sollte Ihr Favorit gesundheitliche oder Verhaltensprobleme 
 	  haben, weisen Sie dies bitte bei der Terminbuchung darauf hin.</p>
 	  
-	  <p>Der erste Termin k&#0246;nnte kürzer dauern oder unvollst&#0228;ndig sein, 
+	  <p>Der erste Termin k&#0246;nnte k&#0252;rzer dauern oder unvollst&#0228;ndig sein, 
 	  wenn der Favorit unter Stress oder Ängsten steht.</p>
 	  
 	  <p>Unmittelbar vor der Ankunft ist es nicht ratsam, den Hund zu 
