--- a/preise.html
+++ b/preise.html
@@ -80,7 +80,7 @@
 	<center><img src="images/katze-preise.jpg" width="150" height="auto"></center>
 	
 	<table>
-	  <th>Behandlungen fUr Katzen</th><th>Preis</th>
+	  <th>Behandlungen f&#0252;r Katzen</th><th>Preis</th>
 	  <tr>
 	    <td class="firstcolumn">Trockenbaden von Katzen und B&#0252;rsten</td><td>35 &euro;</td>
 	  </tr>
