--- a/wichtig.html
+++ b/wichtig.html
@@ -38,14 +38,14 @@
 	
 	<center><img src="images/tartufar.jpg" class="wichtig-img"></center>
 	
-	  <p>Bei den Terminen möchten wir Ihrem Favorit das Beste - daher 
+	  <p>Bei den Terminen m&#0246;chten wir Ihrem Favorit das Beste - daher 
 	  arbeiten wir zuzamen. Nehmen Sie sich Zeit, um den Aufenthalt
 	  Ihres Favorit stressfrei zu gestalten. Auf diese Weise gestalten 
 	  wir gemeinsam das Erscheinungsbild Ihres Favorit f&#0252;r eine 
 	  bessere Gesundheit und Hygiene.</p>	
 	  
 	  <p>Wir f&#0252;hren Behandlungen f&#0252;r die Gesundheit Ihrer Favoriten und 
-	  die Hygiene Ihres Zuhauses durch, nicht für Ausstellungen und 
+	  die Hygiene Ihres Zuhauses durch, nicht f&#0252;r Ausstellungen und 
 	  Wettbewerbe.</p>
 	</div>
 	
@@ -57,7 +57,7 @@
 	  haben, weisen Sie dies bitte bei der Terminbuchung darauf hin.</p>
 	  
 	  <p>Der erste Termin k&#0246;nnte k&#0252;rzer dauern oder unvollst&#0228;ndig sein, 
-	  wenn der Favorit unter Stress oder Ängsten steht.</p>
+	  wenn der Favorit unter Stress oder 196;ngsten steht.</p>
 	  
 	  <p>Unmittelbar vor der Ankunft ist es nicht ratsam, den Hund zu 
 	  f&#0252;ttern, damit er w&#0228;hrend der Behandlung keinen Durst versp&#0252;rt.</p>
