--- a/wichtig.html
+++ b/wichtig.html
@@ -71,7 +71,7 @@
 
 	    <p>Bitte p&#0252;nktlich zum Termin erscheinen - aber nicht zu fr&#0252;h kommen</p>
 		
-		<p><b>Bei Versp&#0228;tung</b> bitte anrufen. Je nach Verspätung kann der Komplettservice nicht mehr erbracht werden.</p>
+		<p><b>Bei Versp&#0228;tung</b> bitte anrufen. Je nach Versp&#228;tung kann der Komplettservice nicht mehr erbracht werden.</p>
 		
 		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, bitte ich verl&#0228;sslich um rechtzeitige Bekanntgabe per SMS oder Anruf.</p>
      </div>
