--- a/service.html
+++ b/service.html
@@ -35,14 +35,14 @@
 	
 	  <div id="service">
 	    <ul>
-		  <li><img src="artwork/bullet.png">Scheren</li>
-		  <li><img src="artwork/bullet.png">Schneiden</li>
-		  <li><img src="artwork/bullet.png">B&#0252;rsten</li>
-		  <li><img src="artwork/bullet.png">Unterwolle entfernen</li>
-		  <li><img src="artwork/bullet.png">Baden und F&#0245;nen</li>
-		  <li><img src="artwork/bullet.png">Krallen- und Pfotenpflege</li>
-		  <li><img src="artwork/bullet.png">Augenpflege</li>
-		  <li><img src="artwork/bullet.png">Ohrenpflege</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Scheren</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Schneiden</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">B&#0252;rsten</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Unterwolle entfernen</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Baden und F&#0245;nen</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Krallen- und Pfotenpflege</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Augenpflege</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Ohrenpflege</li>
 		</ul>
 
 	  </div>
@@ -51,19 +51,19 @@
 	  <h2>Sowie:</h2>
 	  <div id="service">
 		<ul>
-		  <li><img src="artwork/bullet.png">Analdrusencheck</li>
-		  <li><img src="artwork/bullet.png">Zecken entfernung</li>
-		  <li><img src="artwork/bullet.png">Trockenbaden von Katzen und b&#0252;rsten</li>
-		  <li><img src="artwork/bullet.png">enkratzte Katzen</li>
-		  <li><img src="artwork/bullet.png">die Knoten im Haar entwirren</li>
-		  <li><img src="artwork/bullet.png">Flohentfernung</li>
-		  <li><img src="artwork/bullet.png">Anpassungsbehandlung für junge und neue Hunden</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Analdrusencheck</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Zecken entfernung</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Trockenbaden von Katzen und b&#0252;rsten</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">enkratzte Katzen</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">die Knoten im Haar entwirren</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Flohentfernung</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Anpassungsbehandlung f&#0252;r junge und neue Hunden</li>
 		</ul>
     </div>
 	
-	<p><b>Das Arbeiten mit der Ausrüstung wird schwierig, wenn der Hund nass 
-	ankommt, und es schr&#0228;nkt auch die Wahl der Frisur ein.Die gesamte 
-	Behandlung wird l&#0228;nger dauern und Ihr Hund wird darüber keine Freude 
+	<p><b>Das Arbeiten mit der Ausr&#0252;stung wird schwierig, wenn der Hund nass 
+	ankommt, und es schr&#0228;nkt auch die Wahl der Frisur ein. Die gesamte 
+	Behandlung wird l&#0228;nger dauern und Ihr Hund wird dar&#0252;ber keine Freude 
 	haben.</b></p>
 	  
 
