--- a/wichtig.html
+++ b/wichtig.html
@@ -32,7 +32,7 @@
   
     <h1>Wichtig zu wissen</h1>
 	
-	<p><b>Dieser kleine Leitfaden dient dazu Ihren Favorit den stressfreien Besuch <br>bei mir zu ermöglichen und ein bestmögliches Ergebnis zu erzielen.</b></p>
+	<p><b>Dieser kleine Leitfaden dient dazu Ihren Favorit den stressfreien Besuch <br>bei uns zu erm&#0246;glichen und ein bestm&#0246;gliches Ergebnis zu erzielen.</b></p>
 	
 	<div id="wichtig">
 	
@@ -57,7 +57,7 @@
 	  haben, weisen Sie dies bitte bei der Terminbuchung darauf hin.</p>
 	  
 	  <p>Der erste Termin k&#0246;nnte k&#0252;rzer dauern oder unvollst&#0228;ndig sein, 
-	  wenn der Favorit unter Stress oder 196;ngsten steht.</p>
+	  wenn der Favorit unter Stress oder &#0196;ngsten steht.</p>
 	  
 	  <p>Unmittelbar vor der Ankunft ist es nicht ratsam, den Hund zu 
 	  f&#0252;ttern, damit er w&#0228;hrend der Behandlung keinen Durst versp&#0252;rt.</p>
