--- a/index.html
+++ b/index.html
@@ -38,20 +38,17 @@
 	  <div id="wilkommen">
 
 	    <p>Machen sie einen Spaziergang in<p>
-		<p><b>Katze und Hundesalon ihr partner in dertierpflage</b></p>
+		<p><b>Katze und Hundesalon ihr partner in der Tierpflage</b></p>
 		<br>
 		<h2>Die Kleine Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels<br><br>
-		Telefonisch erreichbar sind wir von 9:00 - 19:00</h2>
-		<br>
-		<br>
+		Telefonisch erreichbar sind wir von Montag bis Samstag 9:00 - 19:00</h2>
 		<h3>0677 623 33493</h3>
 		<br>
 		<br>
 		<h2>Offnungszeiten richten sich nach den Terminen</h2>
-		
+		<br>
+		<br>
 		<h2>Sie k&#0246;nnen uns auch per E-Mail kontaktieren</h2>
-		<br>
-		<br>
 		<h3>pfotenkleine@gmail.com</h3>
 
 	  </div>
