--- a/preise.html
+++ b/preise.html
@@ -20,9 +20,10 @@
   <div id="header">
     <ul id="mainmenu">
 	  <li><a href="index.html">Home</li>
-	  <li><a href="wichtig.html">Wichtig zu wissen</a></li>
+	  <li><a href="wichtig.html">Wissenswertes</a></li>
 	  <li><a href="service.html">Service</a></li>
 	  <li><a href="preise.html">Preise</a></li>
+	  <li><a href="fotogalerie.html">Fotogalerie</a></li>
 	</ul>
   </div>
  
@@ -38,9 +39,9 @@
 
 	
 	<table>
-	  <th>Service</th><th>kleine Hunde</th><th>mittlere Hunde</th><th>grose Hunde</th>
+	  <th>Service</th><th>kleine Hunde</th><th>Mittlere Hunde</th><th>Gro&#0223;e Hunde</th>
 	  <tr>
-	    <td class="firstcolumn">Baden und trocknen</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
+	    <td class="firstcolumn">Baden und Trocknen</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
 	  </tr>
 	  <tr>
 	    <td class="firstcolumn">Haarschnitt</td><td>35 &euro;</td><td>40 &euro;</td><td>45 &euro;</td>
@@ -52,10 +53,10 @@
 	    <td class="firstcolumn">Entfernung der Unterwolle</td><td>10 &euro;</td><td>15 &euro;</td><td>25 &euro;</td>
 	  </tr>
 	  <tr>
-	   <td class="firstcolumn">Ohrenpflege und reinigung</td><td colspan="3">5 &euro;</td>
+	   <td class="firstcolumn">Ohrenpflege und Reinigung</td><td colspan="3">5 &euro;</td>
 	 </tr>
 	 <tr>
-	   <td class="firstcolumn">Analdrusenentleerung</td><td colspan="3">10 &euro;</td>
+	   <td class="firstcolumn">Analdr&#0252;senentleerung</td><td colspan="3">10 &euro;</td>
 	 </tr>
 	 <tr>
 	   <td class="firstcolumn">Kralen schneiden</td><td colspan="3">5 &euro;</td>
@@ -70,7 +71,7 @@
 	    <td class="firstcolumn">Hochentfernung</td><td colspan="3">20 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td colspan="2" class="firstcolumn">Anpassung junger Hunde an die Behandlngen</td><td>20 &euro;</td><td></td>
+	    <td colspan="2" class="firstcolumn">Anpassung j&#0252;nger Hunde an die Behandlngen</td><td>20 &euro;</td><td></td>
 	  </tr>
 	</table>
   </div>
@@ -82,13 +83,13 @@
 	<table>
 	  <th>Behandlungen f&#0252;r Katzen</th><th>Preis</th>
 	  <tr>
-	    <td class="firstcolumn">Trockenbaden von Katzen und B&#0252;rsten</td><td>35 &euro;</td>
+	    <td class="firstcolumn">Trockenbaden und B&#0252;rsten von Katzen</td><td>35 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn">enkratzte Katzen</td><td>5 &euro;</td>
+	    <td class="firstcolumn">Entkrallen</td><td>5 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn">die Knoten im Haar entwirren</td><td>20 &euro;</td>
+	    <td class="firstcolumn"> Knoten im Haar entwirren</td><td>20 &euro;</td>
 	</tr>
 </table>
   </div>
