--- a/service.html
+++ b/service.html
@@ -20,9 +20,10 @@
   <div id="header">
     <ul id="mainmenu">
 	  <li><a href="index.html">Home</li>
-	  <li><a href="wichtig.html">Wichtig zu wissen</a></li>
+	  <li><a href="wichtig.html">Wissenswertes</a></li>
 	  <li><a href="service.html">Service</a></li>
 	  <li><a href="preise.html">Preise</a></li>
+	  <li><a href="fotogalerie.html">Fotogalerie</a></li>
 	</ul>
   </div>
  
@@ -30,7 +31,7 @@
   
   <div id="content">
   
-    <h2>Main Hunde und Katzenservice:</h2>
+    <h2>Unsere Hunde und Katzenservice:</h2>
 	
 	
 	  <div id="service">
@@ -39,7 +40,7 @@
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Schneiden</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">B&#0252;rsten</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Unterwolle entfernen</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Baden und F&#0245;nen</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Baden und F&#0245;hnen</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Krallen- und Pfotenpflege</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Augenpflege</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Ohrenpflege</li>
@@ -52,19 +53,18 @@
 	  <div id="service">
 		<ul>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Analdrusencheck</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Zecken entfernung</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Zecken Entfernung</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Trockenbaden von Katzen und b&#0252;rsten</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">enkratzte Katzen</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">die Knoten im Haar entwirren</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Flohentfernung</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Entkrallen</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw"> Knoten im Haar entwirren</li>
+		  <li><img src="artwork/bullet.png" class="bullet-paw">Floh-Entfernung</li>
 		  <li><img src="artwork/bullet.png" class="bullet-paw">Anpassungsbehandlung f&#0252;r junge und neue Hunden</li>
 		</ul>
     </div>
 	
-	<p><b>Das Arbeiten mit der Ausr&#0252;stung wird schwierig, wenn der Hund nass 
-	ankommt, und es schr&#0228;nkt auch die Wahl der Frisur ein. Die gesamte 
-	Behandlung wird l&#0228;nger dauern und Ihr Hund wird dar&#0252;ber keine Freude 
-	haben.</b></p>
+	<p><b>DDas Arbeiten gestaltet sich schwierig, wenn der Hund nass ankommt, 
+	und es schr&#0228;nkt auch die Wahl der Frisur ein. Die gesamte Behandlung 
+	wird l&#0228;nger dauern und Ihr Hund wird dar&#0252;ber keine Freude haben.</b></p>
 	  
 
 	  
