--- a/wichtig.html
+++ b/wichtig.html
@@ -20,9 +20,10 @@
   <div id="header">
     <ul id="mainmenu">
 	  <li><a href="index.html">Home</li>
-	  <li><a href="wichtig.html">Wichtig zu wissen</a></li>
+	  <li><a href="wichtig.html">Wissenswertes</a></li>
 	  <li><a href="service.html">Service</a></li>
 	  <li><a href="preise.html">Preise</a></li>
+	  <li><a href="fotogalerie.html">Fotogalerie</a></li>
 	</ul>
   </div>
  
@@ -30,37 +31,41 @@
   
   <div id="content">
   
-    <h1>Wichtig zu wissen</h1>
+    <h1>Wissenswertes</h1>
 	
-	<p><b>Dieser kleine Leitfaden dient dazu Ihren Favorit den stressfreien Besuch <br>bei uns zu erm&#0246;glichen und ein bestm&#0246;gliches Ergebnis zu erzielen.</b></p>
+	<p><b>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.&#0246;gliches Ergebnis zu erzielen.</b></p>
 	
 	<div id="wichtig">
 	
 	<center><img src="images/tartufar.jpg" class="wichtig-img"></center>
 	
-	  <p>Bei den Terminen m&#0246;chten wir Ihrem Favorit das Beste - daher 
-	  arbeiten wir zuzamen. Nehmen Sie sich Zeit, um den Aufenthalt
-	  Ihres Favorit stressfrei zu gestalten. Auf diese Weise gestalten 
-	  wir gemeinsam das Erscheinungsbild Ihres Favorit f&#0252;r eine 
-	  bessere Gesundheit und Hygiene.</p>	
+	  <p>Bei den Terminen m&#0246;chten wir den bestm&#0246;glichen 
+	  Aufenthalt f&#0252;r Ihr Tier 
+	  gew&#0228;hrleisten. Nehmen Sie sich die Zeit, den Aufenthalt Ihres Tieres so 
+	  stressfrei wie m&#0246;glich zu gestalten.</p>
 	  
-	  <p>Wir f&#0252;hren Behandlungen f&#0252;r die Gesundheit Ihrer Favoriten und 
-	  die Hygiene Ihres Zuhauses durch, nicht f&#0252;r Ausstellungen und 
-	  Wettbewerbe.</p>
+	  <p>Gemeinsam sorgen wir f&#0252;r das 
+	  Wohlbefinden und ein gepflegtes Erscheinungsbild, damit Gesundheit und 
+	  Hygiene optimal unterst&#0252;tzt werden. Unsere Arbeiten sind nicht f&#0252;r 
+	  Ausstellungen oder Wettbewerbe vorgesehen.</p>	
+	  
 	</div>
 	
 	<div id="wichtig">
 	
 		<center><img src="images/cocker.png" class="wichtig-img"o"></center>
 
-	  <p>Sollte Ihr Favorit gesundheitliche oder Verhaltensprobleme 
-	  haben, weisen Sie dies bitte bei der Terminbuchung darauf hin.</p>
+	  <p>Falls Ihr Tier Gesundheits- oder Verhaltensprobleme hat, teilen Sie uns 
+	  dies bitte bereits bei der Terminbuchung mit.</p>
 	  
-	  <p>Der erste Termin k&#0246;nnte k&#0252;rzer dauern oder unvollst&#0228;ndig sein, 
-	  wenn der Favorit unter Stress oder &#0196;ngsten steht.</p>
+	  <p>Der erste Termin k&#0246;nnte verk&#0252;rzt oder nicht 
+	  vollst&#0228;ndig durchgef&#0252;hrt werden, falls dieses unter 
+	  Stress oder &#0196;ngsten leidet.</p>
 	  
-	  <p>Unmittelbar vor der Ankunft ist es nicht ratsam, den Hund zu 
-	  f&#0252;ttern, damit er w&#0228;hrend der Behandlung keinen Durst versp&#0252;rt.</p>
+	  <p>Bitte vermeiden Sie es, Ihr Tier unmittelbar 
+	  vor der Ankunft zu f&#0252;ttern, damit es w&#0228;hrend der Behandlung 
+	  keinen Durst versp&#0252;rt.</p>
+	  
 	</div>
 	
 	
@@ -69,11 +74,16 @@
 	  
 	  	<center><img src="images/husky.png" class="wichtig-img"></center>
 
-	    <p>Bitte p&#0252;nktlich zum Termin erscheinen - aber nicht zu fr&#0252;h kommen</p>
+	    <p>BBitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
+		nicht zu fr&#0252;h.</p>
 		
-		<p><b>Bei Versp&#0228;tung</b> bitte anrufen. Je nach Versp&#228;tung kann der Komplettservice nicht mehr erbracht werden.</p>
+		<p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
+		Abh&#0228;ngig von der Dauer der Verspätung kann es sein, dass der 
+		Komplettservice nicht mehr durchgef&#0252;hrt werden kann.</p>
 		
-		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, bitte ich verl&#0228;sslich um rechtzeitige Bekanntgabe per SMS oder Anruf.</p>
+		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, geben Sie uns 
+		bitte zuverl&#0228;ssig und rechtzeitig per SMS oder Anruf Bescheid.</p>
+		
      </div>
  
  <div id="footer"> 
