--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   <div id="header">
     <ul id="mainmenu">
 	  <li><a href="index.html">Home</li>
-	  <li><a href="wichtig.html">Wichtig zu wissen</a></li>
+	  <li><a href="wichtig.html">Wissenswertes</a></li>
 	  <li><a href="service.html">Service</a></li>
 	  <li><a href="preise.html">Preise</a></li>
+	  <li><a href="fotogalerie.html">Fotogalerie</a></li>
 	</ul>
   </div>
  
@@ -37,18 +38,22 @@
 	
 	  <div id="wilkommen">
 
-	    <p>Machen sie einen Spaziergang in<p>
-		<p><b>Katze und Hundesalon ihr partner in der Tierpflage</b></p>
+	    <p>Besuchen Sie uns f&#0252;r eine hervorragende Pflege, 
+		die Ihr Haustier genie&#0223;en wird, in unserem Katzen- und Hundesalon,</p>
+		<p><b>Ihrem kompetenten Partner in der Tierpflege</b></p>
 		<br>
-		<h2>Die Kleine Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels<br><br>
-		Telefonisch erreichbar sind wir von Montag bis Samstag 9:00 - 19:00</h2>
-		<h3>0677 623 33493</h3>
+		<h2>Die Kleine Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels</h2><br><br>
+		
+		<h2>Wir sind von Montag bis Samstag telefonisch von 9:00 - 19:00 Uhr 
+		f&#0252;r Sie erreichbar unter der Telefonnummer</h2>
+		
+		<h3>0677 623 334 93</h3>
 		<br>
 		<br>
-		<h2>Offnungszeiten richten sich nach den Terminen</h2>
+		<h2>Die &#0214;ffnungszeiten richten sich nach Terminvereinbarung.</h2>
 		<br>
 		<br>
-		<h2>Sie k&#0246;nnen uns auch per E-Mail kontaktieren</h2>
+		<h2>Gerne k&#0246;nnen Sie uns auch per E-Mail kontaktieren:</h2>
 		<h3>pfotenkleine@gmail.com</h3>
 
 	  </div>
