--- a/service.html
+++ b/service.html
@@ -62,7 +62,7 @@
 		</ul>
     </div>
 	
-	<p><b>DDas Arbeiten gestaltet sich schwierig, wenn der Hund nass ankommt, 
+	<p><b>Das Arbeiten gestaltet sich schwierig, wenn der Hund nass ankommt, 
 	und es schr&#0228;nkt auch die Wahl der Frisur ein. Die gesamte Behandlung 
 	wird l&#0228;nger dauern und Ihr Hund wird dar&#0252;ber keine Freude haben.</b></p>
 	  
