--- a/wichtig.html
+++ b/wichtig.html
@@ -78,7 +78,7 @@
 		nicht zu fr&#0252;h.</p>
 		
 		<p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
-		Abh&#0228;ngig von der Dauer der Verspätung kann es sein, dass der 
+		Abh&#0228;ngig von der Dauer der Versp&#0228;tung kann es sein, dass der 
 		Komplettservice nicht mehr durchgef&#0252;hrt werden kann.</p>
 		
 		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, geben Sie uns 
