--- a/preise.html
+++ b/preise.html
@@ -39,7 +39,7 @@
 
 	
 	<table>
-	  <th>Service</th><th>kleine Hunde</th><th>Mittlere Hunde</th><th>Gro&#0223;e Hunde</th>
+	  <th>Service</th><th>Kleine Hunde</th><th>Mittlere Hunde</th><th>Gro&#0223;e Hunde</th>
 	  <tr>
 	    <td class="firstcolumn">Baden und Trocknen</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
 	  </tr>
