--- a/wichtig.html
+++ b/wichtig.html
@@ -33,7 +33,7 @@
   
     <h1>Wissenswertes</h1>
 	
-	<p><b>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.&#0246;gliches Ergebnis zu erzielen.</b></p>
+	<p><b>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.</p>
 	
 	<div id="wichtig">
 	
@@ -74,7 +74,7 @@
 	  
 	  	<center><img src="images/husky.png" class="wichtig-img"></center>
 
-	    <p>BBitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
+	    <p>Bitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
 		nicht zu fr&#0252;h.</p>
 		
 		<p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
