--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		die Ihr Haustier genie&#0223;en wird, in unserem Katzen- und Hundesalon,</p>
 		<p><b>Ihrem kompetenten Partner in der Tierpflege</b></p>
 		<br>
-		<h2>Die Kleine Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels</h2><br><br>
+		<h2>Die Kleinen Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels</h2><br><br>
 		
 		<h2>Wir sind von Montag bis Samstag telefonisch von 9:00 - 19:00 Uhr 
 		f&#0252;r Sie erreichbar unter der Telefonnummer</h2>
