--- a/fotogalerie.html
+++ b/fotogalerie.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Preise</title>
+<title>Die Kleine Pfoten: Foto</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="die kleine pfoten, hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="description" content="Fotogalerie unserer zufriedenen Kunden">
+<meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalo, hund, katze, salon">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -30,11 +30,11 @@
   
   
   <div id="content">
-  
-    <h2>Fotogalerie:</h2>
-	
 	
 	  <div id="fotogalerie">
+	  
+	  <h1>Fotogalerie unserer zufriedenen Kunden</h1>
+	  
 	    <ul>
 		  <li><img src="galerie/leni1.jpg" class="fotogalerie-horiz"></li>
 		  <li><img src="galerie/leni2.jpg" class="fotogalerie-horiz"></li>
