--- a/preise.html
+++ b/preise.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Ihr Partner in der Tierpflege</title>
+<title>Die Kleine Pfoten: Preise</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="description" content="Preise unserer Tierpflegeservices">
+<meta name="keywords" Content="die kleinen pfoten, tierpflege, grooming, schneiden, baden, bursten, katze, salon, pfoten, frizure, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -31,7 +31,7 @@
   
   <div id="content">
   
-    <center><h1>Preise</h1></center>
+    <center><h1>Preise unserer Tierpflegeservices</h1></center>
 	
 	<div id="preise">
 	
