--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Ihr Partner in der Tierpflege</title>
+<title>Die Kleine Pfoten: Hunde- und Katzensalon</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="die kleine pfoten, hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming, baden, hund ,katze, frizure wels">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -37,6 +37,8 @@
 	
 	
 	  <div id="wilkommen">
+	  
+	  <h1>Die Kleinen Pfoten Hunde- und Katzen-salon: Ihr Partner in der Tierpflege</h1>
 
 	    <p>Besuchen Sie uns f&#0252;r eine hervorragende Pflege, 
 		die Ihr Haustier genie&#0223;en wird, in unserem Katzen- und Hundesalon,</p>
