--- a/wichtig.html
+++ b/wichtig.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Service</title>
+<title>Die Kleine Pfoten: Tipps</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
-<meta name="keywords" Content="die kleine pfoten, hundesalon, katzensalon, tierpflege, wels, scheren, schneiden, pfotenpflege, krallenpflege,zeckenentfernung, flohentfernung">
+<meta name="description" content="Tipps für einen angenehmen Besuch im Tiersalon">
+<meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming">
 </head>
 <!-- ############################################################## -->
 <body>
@@ -31,7 +31,7 @@
   
   <div id="content">
   
-    <h1>Wissenswertes</h1>
+    <h1>Tipps f&#0252;r einen angenehmen Besuch im Tiersalon</h1>
 	
 	<p><b>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.</p>
 	
