--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
   
   <div id="content">
   
-    <h1>Unser Angebot an Pflegeleservice f&#0252;r Ihr Haustier:</h1>
+    <h1>Unser Angebot an Pflegeservice f&#0252;r Ihr Haustier:</h1>
 	
 	
 	  <div id="service">
