--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	
 	  <div id="wilkommen">
 	  
-	  <h1>Die Kleinen Pfoten Hunde- und Katzen-salon: Ihr Partner in der Tierpflege</h1>
+	  <h1>Die Kleinen Pfoten Hunde und Katzensalon: Ihr Partner in der Tierpflege</h1>
 
 	    <p>Besuchen Sie uns f&#0252;r eine hervorragende Pflege, 
 		die Ihr Haustier genie&#0223;en wird, in unserem Katzen- und Hundesalon,</p>
