--- a/fotogalerie.html
+++ b/fotogalerie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleine Pfoten: Foto</title>
+<title>Die Kleinen Pfoten: Foto</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
