--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	  </div>
 	  
-	  <a href="https://www.google.com/maps/place/Linzer+Str.+57,+4600+Wels,+Austria/@48.1627795,14.0303923,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f2a3cba54ae1:0xdac4fd72e622d8f8!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11c1x3zm65?authuser=0&entry=ttu&g_ep=EgoyMDI1MDExMC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+	  <a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.0301177,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDIwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
 	  <img src="artwork/map.png" class="map"></a>
 	  
 
