--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <h1>Die Kleinen Pfoten Hunde und Katzensalon: Ihr Partner in der Tierpflege</h1>
 
 	    <p>Besuchen Sie uns f&#0252;r eine hervorragende Pflege, 
-		die Ihr Haustier genie&#0223;en wird, in unserem Katzen- und Hundesalon,</p>
+		die Ihr Haustier genie&#0223;en wird, in unserem Katzen und Hundesalon,</p>
 		<p><b>Ihrem kompetenten Partner in der Tierpflege</b></p>
 		<br>
 		<h2>Die Kleinen Pfoten<br>Linzer Stra&#0223;e 57<br>4600 Wels</h2><br><br>
