--- a/preise.html
+++ b/preise.html
@@ -68,7 +68,7 @@
 	    <td class="firstcolumn">Zeckenentfernung</td><td colspan="3">2 &euro;</td>
       </tr>
 	  <tr>
-	    <td class="firstcolumn">Hochentfernung</td><td colspan="3">20 &euro;</td>
+	    <td class="firstcolumn">Floh-Entfernung</td><td colspan="3">20 &euro;</td>
 	  </tr>
 	  <tr>
 	    <td colspan="2" class="firstcolumn">Anpassung j&#0252;nger Hunde an die Behandlngen</td><td>20 &euro;</td><td></td>
