--- a/preise.html
+++ b/preise.html
@@ -41,19 +41,21 @@
 	<table>
 	  <th>Service</th><th>Kleine Hunde</th><th>Mittlere Hunde</th><th>Gro&#0223;e Hunde</th>
 	  <tr>
-	    <td class="firstcolumn">Baden und Trocknen</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
+	    <td class="firstcolumn">Baden und Trocknen</td><td>15 &euro;</td><td class="left-border">20 &euro;</td><td class="left-border">25 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn">Haarschnitt</td><td>30 &euro;</td><td>35 &euro;</td><td>45 &euro;</td>
+	    <td class="firstcolumn">Haarschnitt</td><td>30 &euro;</td><td class="left-border">35 &euro;</td><td class="left-border">45 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn">B&#0252;rsten</td><td>15 &euro;</td><td>20 &euro;</td><td>25 &euro;</td>
+	    <td class="firstcolumn">B&#0252;rsten</td><td>15 &euro;</td><td class="left-border">20 &euro;</td><td class="left-border">25 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn">Entfernung der Unterwolle</td><td>10 &euro;</td><td>15 &euro;</td><td>25 &euro;</td>
+	    <td class="firstcolumn" style="border-bottom:none">Entfernung der Unterwolle</td><td style="border-bottom:none">10 &euro;</td><td style="border-bottom:none" class="left-border">15 &euro;</td><td class="left-border" style="border-bottom:none">25 &euro;</td>
 	  </tr>
+	  
+	  
 	  <tr>
-	   <td class="firstcolumn">Ohrenpflege und Reinigung</td><td colspan="3">5 &euro;</td>
+	   <td class="firstcolumn" style="border-top:5px double #7CB9E8">Ohrenpflege und Reinigung</td><td colspan="3" style="border-top:5px double #7CB9E8">5 &euro;</td>
 	 </tr>
 	 <tr>
 	   <td class="firstcolumn">Analdr&#0252;senentleerung</td><td colspan="3">10 &euro;</td>
