--- a/fotogalerie.html
+++ b/fotogalerie.html
@@ -14,16 +14,25 @@
 <div id="wrapper">
 
   <div id="banner">
-    <img src="artwork/logo-horizontal.png">
+    <table>
+	  <tr>
+	    <td rowspan="2"><img src="artwork/logo-horizontal.png" class="banner-img"></td><td sstyle="vertical-align:bottom"><p>0677 623 334 93</p></td>
+	  </tr>
+	  <tr>
+	    <td style="vertical-align:top"><p>pfotenkleine@gmail.com</p></td>
+	  </tr>
+	</table>
+    
   </div>
   
   <div id="header">
     <ul id="mainmenu">
 	  <li><a href="index.html">Home</li>
-	  <li><a href="wichtig.html">Wichtig zu wissen</a></li>
 	  <li><a href="service.html">Service</a></li>
 	  <li><a href="preise.html">Preise</a></li>
+	  <li><a href="wichtig.html">Wissenswertes</a></li>
 	  <li><a href="fotogalerie.html">Fotogalerie</a></li>
+	  <li><a href="kontakt.html">Kontakt</a></li>
 	</ul>
   </div>
  
@@ -52,6 +61,7 @@
 		  <li><img src="galerie/crnipas1.jpg" class="fotogalerie-horiz"></li>
 		  <li><img src="galerie/smedipas2.jpg" class="fotogalerie-horiz"></li>
 		  <li><img src="galerie/crnipas2.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/bijelipas1.jpg" class="fotogalerie-horiz"></li>
 		</ul>
 	    
 
