--- a/kontakt.html
+++ b/kontakt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Die Kleinen Pfoten: Hundesalon, Katzensalon und Tierpflege</title>
+<title>Die Kleinen Pfoten: Kontakt</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -40,45 +40,28 @@
   
   <div id="content">
   
-    <!-- <h1>Herzlich Wilkommen in die Welt der Kleine Pfoten!</h1> -->
+    <div id="kontakt">
 	
+	<h3>Telefon:<br>0677 623 334 93</h3>
+	<br>
+	<h3>E-mail:<br>pfotenkleine@gmail.com</h3>
+	<br>
 	
-	<img src="artwork/wilkommen.png" class="wilkommen-img">
-	
-	<center><
-	<h1>Hunde und Katzensalon: Ihr Partner in der Tierpflege</h1>
-	</center>
-	
-	<img src="images/salon.jpg" class="salon-img">
-
-	
-	
-	  <div id="wilkommen">
-	  <center>
-	    <h3>Die Kleinen Pfoten<br>
-		Linzer Stra&#0223;e 57<br>
-		4600 Wels</h3>
-	  </center>
+	<h4>Die Kleinen Pfoten<br>
+	Linzer Stra&#0223;e 57<br>
+	4600 Wels</h4>
+  
+    <a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.0301177,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDIwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+	  <img src="artwork/map.png" class="map"></a>
 	  
-	  <br>
-	  <br>
-		
-		<center>
-		<p><b>Mit unserer Karte erhalten Sie einen kostenlosen Service</b></p>
-		
-		<img src="images/karte.png" width="400" height="auto" class="karte">
-		</center>
-	  
-
-	    
-
-	  </div>
-	  
+	  <h3>Offnungszeiten:</h3>
+	    <h4 style="margin-left:20px">Montag - Freitag<br>9:00 bis 19:00</h4>
+		<br>
+		<h4 style="margin-left:20px">Samstag:<br>9:00 bis 18:00</h4>
+  
+	
 	
 	  
-
-	  
-
  
  </div>
  
